# lanvibe

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/skills/ui-branding/: SKILL.md
.github/workflows/: release.yml
branding/: Palette - Coolors.url
public/: manifest.webmanifest
scripts/: dev-api.mjs  service-access.test.mjs  verify-popover-lifecycle.mjs  wrangler-personal.mjs
src/: App.tsx  api.ts  brand.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app_state.rs  db.rs  discovery.rs  favicon.rs  main.rs  models.rs  native_effects.rs  scanner.rs  startup.rs  tray.rs  web.rs
src/components/: theme-provider.tsx  theme-toggle.tsx
src/components/common/: ConfirmationDialog.tsx  EmptyState.tsx  KillProcessButton.tsx  ProcessOwnerBadge.tsx  ServiceFavicon.tsx  StatusDot.tsx  SummaryChip.tsx
src/components/devices/: DeviceRow.tsx  DevicesView.tsx
src/components/favorites/: FavoriteTile.tsx  FavoritesView.tsx  ReorderableFavoritesGrid.tsx
src/components/layout/: AppShell.tsx
src/components/popover/: PopoverApp.tsx
src/components/services/: FavoritesBlock.tsx  ServiceGroup.tsx  ServiceRow.tsx  ServicesToolbar.tsx  ServicesView.tsx
src/components/settings/: DashboardCard.tsx  NumberField.tsx  SettingsView.tsx  UpdateCard.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  switch.tsx  tooltip.tsx
src/hooks/: useFavicons.ts  useFavorites.ts  useFinderData.ts  usePopoverData.ts
src/lib/: finder.ts  service-access.ts
