[package]
name = "lanvibe"
version = "0.1.7"
description = "Discover and reopen web UIs running on selected LAN devices"
authors = ["TheKeven"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "2"
futures = "0.3"
get_if_addrs = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "ico", "jpeg", "gif", "webp", "bmp"] }
open = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
