[package]
name = "lanvibe"
version = "0.1.12"
description = "Discover and reopen web UIs running on selected LAN devices"
authors = ["TheKeven"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "2"
futures = "0.3"
get_if_addrs = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "ico", "jpeg", "gif", "webp", "bmp"] }
open = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSView", "NSWindow", "objc2-quartz-core"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["CALayer", "objc2-core-foundation"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["WKWebView", "objc2-app-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
